--- a/scripts/install
+++ b/scripts/install
@@ -87,6 +87,7 @@ ynh_setup_source "$final_path"
 ynh_print_info "Installing dependencies and pip packages"
 ynh_install_app_dependencies $PKG_DEPENDENCIES
 pip install --target $final_path/vendor -r $final_path/requirements.txt
+pip install --target $final_path/vendor -r $final_path/optional-requirements.txt
 
 #=================================================
 # NGINX CONFIGURATION
