Update scripts to new standard

--- a/scripts/install
+++ b/scripts/install
@@ -38,7 +38,7 @@ source _settings.sh
 #=================================================
 # CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
 #=================================================
-ynh_script_progression -t --message="Validating installation parameters..."
+ynh_script_progression --message="Validating installation parameters..."
 
 final_path=/var/www/$app
 test ! -e "$final_path" || ynh_die "This path already contains a folder"
@@ -54,7 +54,7 @@ ynh_webpath_register $app $domain $path_url
 #=================================================
 # STORE SETTINGS FROM MANIFEST
 #=================================================
-ynh_script_progression -t --message="Storing installation settings..."
+ynh_script_progression --message="Storing installation settings..."
 
 ynh_app_setting_set $app domain $domain
 ynh_app_setting_set $app path $path_url
@@ -71,14 +71,14 @@ ynh_app_setting_set $app is_public $is_public
 # Find a free port
 port=$(ynh_find_port 8083)
 # Open this port
-ynh_script_progression -t --message="Opening port $port..." --weight=5
+ynh_script_progression --message="Opening port $port..." --weight=5
 yunohost firewall allow --no-upnp TCP $port 2>&1
 ynh_app_setting_set $app port $port
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
-ynh_script_progression -t --message="Downloading sources to $final_path..." --weight=10
+ynh_script_progression --message="Downloading sources to $final_path..." --weight=10
 ynh_app_setting_set $app final_path $final_path
 # Download, check integrity, uncompress and patch the source from app.src
 ynh_setup_source "$final_path"
@@ -86,19 +86,21 @@ ynh_setup_source "$final_path"
 #=================================================
 # INSTALL DEPENDENCIES
 #=================================================
-ynh_script_progression -t --message="Installing dependencies..." --weight=15
 
+ynh_script_progression --message="Installing package dependencies..." --weight=15
 ynh_install_app_dependencies $PKG_DEPENDENCIES
-ynh_script_progression -t --message="Installing dependencies..." --weight=15
+
+ynh_script_progression --message="Installing pip requirements ..." --weight=30
 pip3 install --no-cache-dir --target $final_path/vendor -r $final_path/requirements.txt
-ynh_script_progression -t --message="Installing dependencies..." --weight=40
+
+ynh_script_progression --message="Installing pip additionnal requirements..." --weight=40
 pip3 install --no-cache-dir --upgrade --target $final_path/vendor -r $final_path/optional-requirements.txt
 
 #=================================================
 # NGINX CONFIGURATION
 #=================================================
 #Cannot use empty string for X-script-name, causes an issue in the python prg
-ynh_script_progression -t --message="Setting up system configuration..." --weight=5
+ynh_script_progression --message="Setting up system configuration..." --weight=5
 
 
 if [ $path_url = "/" ] ; then
@@ -127,7 +129,7 @@ ynh_add_systemd_config
 #=================================================
 # CREATE FILES AND DIRECTORIES
 #=================================================
-ynh_script_progression -t --message="Creating files and directory..."
+ynh_script_progression --message="Creating files and directory..."
 #Logic is as follow : if app is set to be publicly accessible, we will assume that the library should be set in "Share" multimedia directory
 # If app is set to be private but access is requested for all user, we will assume the same
 # If app is set to be private but access is limited to the admin user, we will set it inside his own multimedia directory.
@@ -167,7 +169,7 @@ chown -R $app:$app /var/log/$app
 #=================================================
 # SET SQLITE DATABASE SETTINGS
 #=================================================
-ynh_script_progression -t --message="Setting up database and settings..."
+ynh_script_progression --message="Setting up database and settings..."
 #we need to start and stop the service so that initial app.db file is created and that we can set default data
 ynh_systemd_action
 
@@ -204,7 +206,7 @@ ynh_store_file_checksum "${final_path}/app.db"
 # ADVERTISE SERVICE IN ADMIN PANEL
 #=================================================
 
-yunohost service add $app --log "/var/log/$app/$app.log"
+yunohost service add $app --description "Browse eBook in the web" --log "/var/log/$app/$app.log"
 
 #=================================================
 # SETUP SSOWAT
@@ -222,10 +224,14 @@ if [ $public_library -eq 0 ]; then
 fi
 
 
-
 #=================================================
 # RELOAD NGINX
 #=================================================
-ynh_script_progression -t -l --message="Reload nginx and start $app..."
-systemctl reload nginx
+ynh_script_progression --message="Reload nginx and start $app..."
+ynh_systemd_action --service_name=nginx --action=reload
 ynh_systemd_action
+
+#=================================================
+# END OF SCRIPT
+#=================================================
+ynh_script_progression --message="Installation of $app completed" --last
