--- a/scripts/install
+++ b/scripts/install
@@ -227,11 +227,11 @@ fi
 #=================================================
 # RELOAD NGINX
 #=================================================
-ynh_script_progression --message="Reload nginx and start $app..." --weight=5 -t
+ynh_script_progression --message="Reload nginx and start $app..." --weight=5
 ynh_systemd_action --service_name=nginx --action=reload
-ynh_systemd_action
+ynh_systemd_action -l "Starting Tornado server on :8083" -t 20
 
 #=================================================
 # END OF SCRIPT
 #=================================================
-ynh_script_progression --message="Installation of $app completed" --last -t
+ynh_script_progression --message="Installation of $app completed" --last
