--- a/scripts/install
+++ b/scripts/install
@@ -233,8 +233,7 @@ fi
 #=================================================
 ynh_script_progression --message="Reload nginx and start $app..." --weight=5
 ynh_systemd_action --service_name=nginx --action=reload
-ynh_systemd_action --service_name=$app --action=start -t 20
-sleep 2s
+ynh_systemd_action --service_name=$app --action=start -l "server on :$port" -t 20
 
 #=================================================
 # END OF SCRIPT
