--- a/scripts/install
+++ b/scripts/install
@@ -94,6 +94,10 @@ ynh_setup_source "$final_path"
 ynh_script_progression --message="Installing package dependencies..." --weight=15
 ynh_install_app_dependencies $PKG_DEPENDENCIES
 
+#use latest version of pip as per documentation in https://github.com/pypa/get-pip
+#cannot use helper as maintaining the checksum would be a pain in the a***
+curl https://bootstrap.pypa.io/get-pip.py | python3
+
 ynh_script_progression --message="Installing pip requirements..." --weight=50
 pip3 install --no-cache-dir --target $final_path/vendor -r $final_path/requirements.txt
 
