Port shouldn't be opened on the firewall ... it supposed to be only there for reverse proxying

--- a/scripts/install
+++ b/scripts/install
@@ -67,14 +67,13 @@ ynh_app_setting_set $app is_public $is_public
 #=================================================
 # STANDARD MODIFICATIONS
 #=================================================
-# FIND AND OPEN A PORT
+# FIND AN AVAILABLE PORT
 #=================================================
 
 # Find a free port
 port=$(ynh_find_port 8083)
 # Open this port
 ynh_script_progression --message="Opening port $port..." --weight=5
-yunohost firewall allow --no-upnp TCP $port 2>&1
 ynh_app_setting_set $app port $port
 
 #=================================================
